[gd_scene load_steps=11 format=2]

[ext_resource path="res://Menus/Menubutton/Button.png" type="Texture" id=1]
[ext_resource path="res://Menus/Menubutton/MenuButton.gd" type="Script" id=2]
[ext_resource path="res://Resources/Fonts/agencyfb-boldcondensed.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Resources/Audio/Effects/MenuButtonHoverOn.wav" type="AudioStream" id=4]
[ext_resource path="res://Resources/Audio/Effects/MenuButtonHoverOff.wav" type="AudioStream" id=5]
[ext_resource path="res://Resources/Audio/Effects/MenuButtonClick.wav" type="AudioStream" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.929412, 0.94902, 0.956863, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.552941, 0.6, 0.682353, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.929412, 0.94902, 0.956863, 1 )

[sub_resource type="DynamicFont" id=4]
size = 72
font_data = ExtResource( 3 )

[node name="MenuButton" type="Button"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -248.5
margin_top = -72.5
margin_right = 248.5
margin_bottom = 72.5
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 6 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
custom_colors/font_color_disabled = Color( 0.168627, 0.176471, 0.258824, 1 )
custom_colors/font_color = Color( 0.168627, 0.176471, 0.258824, 1 )
custom_colors/font_color_hover = Color( 0.168627, 0.176471, 0.258824, 1 )
custom_colors/font_color_pressed = Color( 0.929412, 0.94902, 0.956863, 1 )
text = "Button"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
color_border = Color( 0.168627, 0.176471, 0.258824, 1 )
border_width = 30
border_width_grow = 50
border_width_click = 60

[node name="Tween" type="Tween" parent="."]

[node name="BorderSprite" type="Sprite" parent="."]
modulate = Color( 0.168627, 0.176471, 0.258824, 1 )
position = Vector2( 369.589, 156.59 )
scale = Vector2( 8.23438, 2.73438 )
z_index = -1
texture = ExtResource( 1 )

[node name="MenuButtonHoverOn" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -25.0
bus = "Effects"

[node name="MenuButtonHoverOff" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -15.0
bus = "Effects"

[node name="MenuButtonClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -15.0
bus = "Effects"
[connection signal="button_down" from="." to="." method="_on_MenuButton_button_down"]
[connection signal="button_up" from="." to="." method="_on_MenuButton_button_up"]
[connection signal="mouse_entered" from="." to="." method="_on_MenuButton_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_MenuButton_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_MenuButton_pressed"]
